--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 Debug/
 Release/
+ipch/
+WindowsMainControlV1/AECMFC4B_lib.h
+*.txt
+WindowsMainControlV1/WindowsMainControlV1.vcxproj
+WindowsMainControlV1/WindowsMainControlV1.vcxproj.filters
