--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@ Debug/
 Release/
 ipch/
 WindowsMainControlV1/AECMFC4B_lib.h
-*.txt
 WindowsMainControlV1/WindowsMainControlV1.vcxproj
 WindowsMainControlV1/WindowsMainControlV1.vcxproj.filters
 .vs/
+WindowsMainControlV1/ReadMe.txt
