--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ WindowsMainControlV1/WindowsMainControlV1.vcxproj
 WindowsMainControlV1/WindowsMainControlV1.vcxproj.filters
 .vs/
 WindowsMainControlV1/ReadMe.txt
+WindowsMainControlV1.opensdf
