--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ WindowsMainControlV1/WindowsMainControlV1.vcxproj.filters
 .vs/
 WindowsMainControlV1/ReadMe.txt
 WindowsMainControlV1.opensdf
+WindowsMainControlV1.sdf
