--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ WindowsMainControlV1/WindowsMainControlV1.vcxproj.filters
 WindowsMainControlV1/ReadMe.txt
 WindowsMainControlV1.opensdf
 WindowsMainControlV1.sdf
+WindowsMainControlV1/WindowsMainControlV1Dlg.cpp.rej
